--- a/2019-03-20-martin.Rmd
+++ b/2019-03-20-martin.Rmd
@@ -52,15 +52,35 @@ as.integer(studentMajors)
 class(studentMajors)
 ```
 
+
+```{r}
+birthplace <- factor(
+    c("台北市","新北市","台中市","台南市","高雄市") )
+```
+
+```{r}
+#install.packages("tidyverse")
+```
+
+```{r}
+library(lubridate)
+dtObject<-ymd_hms("1970-01-01 00:02:53") 
+```
+```{r}
+tObjectVector<-ymd_hms(
+  c("1970-01-01 00:02:53",
+    "1980-02-11 11:25:22")
+)
+```
+
+```{r}
+class(dtObject)
+```
+```{r}
+dtObject
+```
+
+
 ```{r}
 stringInteger <- c("1","2","-11")
 class(stringInteger) 
-```
-```{r}
-birthplace <- factor(
-  c("台北市","新北市","台中市","台南市","高雄市")
-)
-class(birthplace)
-typeof(birthplace)
-levels(birthplace)
-as.integer(birthplace)
