--- a/0410.Rmd
+++ b/0410.Rmd
@@ -94,4 +94,15 @@ d <- str_sub(birthday,7,8)
 str_c("西元",y,"年",m,"月",d,"日")
 str_c
 ```
+```{r}
+民國年月<-c("099/01","099/02","099/03")
+my <- str_sub(民國年月,2,3)
+my
+mm <- str_sub(民國年月,5,6)
+mm
+y <- 99+1911
+y
+str_c("西元",y,"年",mm,"月")
+str_c
+```
 
