--- a/0410.Rmd
+++ b/0410.Rmd
@@ -106,4 +106,23 @@ y <-my+1911
 str_c("西元",y,"年",mm,"月")
 str_c
 ```
+```{r}
+a<-c(1:3)
+typeof(a)
+a
+```
+```{r}
+aWithNames <- c(
+  a1=1,
+  a2=2,
+  a3=3
+)
+typeof(a)
+aWithNames
+```
+
+```{r}
+b1<-list("a","b",c(1:10))
+typeof(b1)
+```
 
