--- a/0417.Rmd
+++ b/0417.Rmd
@@ -150,3 +150,23 @@ plotly_4070_neda$x$layout$shapes[[1]]$opacity<-0.8
 plotly_4070_neda
 ```
 
+```{r}
+library(readr)
+filmVotingData <- read_csv("https://raw.githubusercontent.com/tpemartin/github-data/master/podcastcompetition3.csv")
+str_replace(filmVotingData$請選擇你最喜歡的影片二部,", by"," by") -> favoriteTwo
+birthday <- filmVotingData$`出生西元年月日（驗證本人用）`
+timeStamp <- filmVotingData$Timestamp
+```
+
+```{r}
+library(stringr)
+str_split(favoriteTwo,", ") -> favoriteTwoList # 將選擇的兩片split成兩個元素
+unlist(favoriteTwoList) -> allVotes # 將list堆疊成atomic vector
+table(allVotes) # 計算每個類別的次數
+```
+
+```{r}
+filmVotingData$Timestamp
+filmVotingData[["Timestamp"]]
+filmVotingData$`Timestamp`
+
