--- a/0424.Rmd
+++ b/0424.Rmd
@@ -150,4 +150,22 @@ matObj1[c(F,F,TRUE,F,F),c(F,TRUE,F)]
 matObj1[c(1,4),c(2,3)]
 matObj1[c(T,F,F,T,F),c(F,T,T)]
 ```
+```{r}
+library(readr)
+classSurvey <- read_csv("https://raw.githubusercontent.com/tpemartin/github-data/master/classSurvey.csv")
+```
+
+```{r}
+dim(classSurvey)
+nrow(classSurvey)
+ncol(classSurvey)
+```
+
+```{r}
+classSurvey[c(1:60),c(4,5)]
+```
+
+```{r}
+classSurvey[c(T),c(F,F,F,T,T,F)]
+```
 
