--- a/0515.Rmd
+++ b/0515.Rmd
@@ -61,3 +61,81 @@ StuDF2
 
 ```
 
+```{r}
+a <- c("1","b","TRUE")
+a
+a[[2]] <- "c" # 元素存在
+a[[5]] <- "7" # 元素不存在
+a
+```
+
+```{r}
+b <- list(
+  元素1=1,
+  元素2="Hello",
+  元素3=TRUE
+)
+b[[3]] <- FALSE
+b[[5]] <- 7
+b
+```
+
+```{r}
+b <- list(
+  元素1=1,
+  元素2="Hello",
+  元素3=TRUE
+)
+b $元素3 <- FALSE
+b $元素5 <- 7
+b
+```
+
+```{r}
+b <- list(
+  元素1=1,
+  元素2="Hello",
+  元素3=TRUE
+)
+b[[3]]<-"FALSE"
+b[[5]]<-"7"
+b
+```
+
+```{r}
+b <- list(
+  元素1=1,
+  元素2="Hello",
+  元素3=TRUE
+)
+
+b$元素2<-"hi"
+b$新成員 <-c(2,5,1)
+b
+```
+
+```{r}
+library(readr)
+exData3 <- read_csv("https://raw.githubusercontent.com/tpemartin/github-data/master/exData3.csv",
+                    col_types = cols(
+                      匯率 = col_number(),
+                      期間 = col_character()))
+```
+
+```{r}
+class(exData3$期間)
+```
+
+```{r}
+library(lubridate)
+```
+
+```{r}
+time3<- exData3$期間
+time3<- ymd(time3)
+time3-> exData3$期間
+
+class(exData3$期間)
+
+```
+
