--- a/0515.Rmd
+++ b/0515.Rmd
@@ -138,4 +138,57 @@ time3-> exData3$期間
 class(exData3$期間)
 
 ```
+```{r}
+isAsiaCrisis <- (exData3$期間 >= "1997-06-01" & exData3$期間 <= "1998-12-01")
+isAsiaCrisis
+```
+
+```{r}
+as.double(exData3$期間)->a
+as.double(1997-06-01)<=a&a<=as.double(1998-12-01)->exData3$isAsiaCrisis
+```
+
+```{r}
+logiAsiaCrisis <- exData3$isAsiaCrisis
+exData3[logiAsiaCrisis, ]
+```
+
+```{r}
+exData3[exData3$isAsiaCrisis==T ,]
+```
+```{r}
+transcriptDataFinal[transcriptDataFinal$學號 == "92aS67fee",]
+```
+
+```{r}
+f <- function(x,.alpha){
+  add <- x+.alpha
+  return(add) 
+}
+f
+```
+
+```{r}
+f(1,3)
+
+```
+
+```{r}
+cheese <- function(x,a)
+{cheesevalue <- x+a
+return(cheesevalue)}
+class(cheese)
+cheese(4,3)
+```
+
+```{r}
+multiplier <- function (m,p){
+  multi <- m*4*p
+  return(multi)}
+multiplier(4,3)
+```
+
+```{r}
+
+```
 
