--- a/0529.Rmd
+++ b/0529.Rmd
@@ -131,4 +131,61 @@ gpa_fun("92aS67fee") # 顯示82.85276
 gpa_fun("aa829838s") # 查無此學號
 ```
 
+```{r}
+fizzbuzz <- function(number){
+  if(number %% 15== 0){
+    return("fizzbuzz")}
+    else if(number%% 3 ==0){
+      return("fizz")
+    }else if (number%% 5 == 0){
+      return("buzz")
+    }else {
+      return(number)
+    }
+}
+
+```
+
+```{r}
+a <- c(1,3,5)
+a>2 # 此邏輯條件產生三個值
+if(a>2) {
+  print("a大於2")
+}
+```
+
+```{r}
+a>2
+any(a>2)
+```
+
+
+```{r}
+a>2
+all(a>2)
+```
+
+```{r}
+a <- 3
+
+testfun <- function(x){
+  y <- a/4
+  output <- x*y
+  return(output)
+}
+
+testfun(2)
+
+a <- 4
+testfun(2)
+```
+
+```{r}
+utility_cobb_douglass(1,2,0.5,0.8)
+```
+
+```{r}
+utility_cobb_douglass(1,2,.beta=0.8,.alpha=0.5)
+```
+
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
