--- a/2019-03-27.Rmd
+++ b/2019-03-27.Rmd
@@ -79,61 +79,33 @@ as.double(twDateTime)
 ```{r}
 a <- c(1, 5, -3)
 b <- c(0.5, 12, 2)
+a
+b
+class(a)
 aL <- c(1L, 5L, -3L)
 bL <- c(-2L, -4L, 8L)
-```{r}
-
-```
-
-
+aL
+class(aL)
 a+bL
 class(a+bL)
 
-aL+bL
-class(aL+bL)
-
-class(aL*bL)
-class(aL/bL)
-
-a+4
-
-b+5
-
-
-twDateTime <- ymd_hms("2019-03-18 14:04:00", tz="Asia/Taipei")
-
-
-twDateTime 
-
-twDateTime+1
-
-
-twDateTime2 <- ymd_hms("2019-03-20 14:04:00", tz="Asia/Taipei")
-
-
-twDateTime2 - twDateTime
-
-
-twDateTime3 <- ymd_hms("2019-03-21 14:04:00", tz="Asia/Taipei")
+```
 
 ```{r}
-twDateTime3 - twDateTime
-x <- 5
-y <- 7
-x2 <- c(1,5,10)
-y2 <- c(-1,5,20)
-x3 <- c("小明","小花")
-y3 <- c("小明","小華")
+a^b
+a%%b
+c <- 4
+c+a
+DateTime1 <- ymd("2019-08-11")
+DateTime2 <- ymd("2000-02-01")
+DateTime1-DateTime2
+```
+```{r}
+startingDate <- ymd("2000-02-17")
+startingDate + years(1)
+startingDate + dyears(1)
+ymd("2000-02-01") -> startingDate
+ymd("2019-08-11") -> endingDate
+endingDate - startingDate
+```
 
-x == y
-x <= y
-x != y
-x < y
-
-x2 == y2
-x2 >= y2
-x2 != y2
-x2 <= y2
-
-x3 == y3
-x3 != y3
